Minor layout bugfix - management page user-menu z-index.

--- a/styles/header.sass
+++ b/styles/header.sass
@@ -1,10 +1,12 @@
 @import 'base/colors'
 
+header
+    z-index: 102
+
 header, .head-nav
     background: #ffffff
     box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.05)
     position: relative
-    z-index: 102
     height: 70px
     line-height: 70px
 
